fix issues on mobile

--- a/styles/sass/_animations.scss
+++ b/styles/sass/_animations.scss
@@ -1,4 +1,59 @@
 
+@-moz-keyframes textGlitch {
+    @for $x from 0 through 10 {
+        #{percentage($x*(1/10))} {
+            text-shadow: random(7)-4+px 0 red;
+            left:(random(100)/20+px);
+        }
+    }
+}
+
+
+
+@-moz-keyframes glitch {
+    @for $x from 0 through 10 {
+        #{percentage($x*(1/10))} {
+            opacity:random(10)/10;
+        }
+    }
+}
+
+
+
+@-moz-keyframes glitch1 {
+    @for $x from 0 through 20 {
+        #{percentage($x*(1/20))} {
+            -moz-text-decoration-line: underline;
+            -moz-text-decoration-style: double;
+            text-decoration-thickness: 1px;
+            clip: rect(random(100)+px, 500px, random(150)+px, 0px); 
+        }
+
+    }
+}
+
+@-moz-keyframes glitch2 {
+    @for $x from 0 through 20 {
+        #{percentage($x*(1/20))} {
+            -moz-text-decoration-line: line-through;
+            text-decoration-thickness: 1px;
+            clip: rect(random(100)+px, 500px, random(150)+px, 0px);
+        }
+
+    }
+}
+
+@-moz-keyframes times {
+    0%{
+        -moz-transform: rotate(0deg);
+        opacity: 0;
+    }
+    100% {
+        -moz-transform: rotate(360deg);
+        opacity: 1;
+    }
+}
+
 @keyframes textGlitch {
     @for $x from 0 through 10 {
         #{percentage($x*(1/10))} {
@@ -23,8 +78,6 @@
 @keyframes glitch1 {
     @for $x from 0 through 20 {
         #{percentage($x*(1/20))} {
-            -moz-text-decoration-line: underline;
-            -moz-text-decoration-style: double;
             text-decoration-line: underline;
             text-decoration-thickness: 1px;
             text-decoration-style: double;
@@ -37,7 +90,6 @@
 @keyframes glitch2 {
     @for $x from 0 through 20 {
         #{percentage($x*(1/20))} {
-            -moz-text-decoration-line: line-through;
             text-decoration-line: line-through;
             text-decoration-thickness: 1px;
             clip: rect(random(100)+px, 500px, random(150)+px, 0px);
@@ -48,12 +100,10 @@
 
 @keyframes times {
     0%{
-        -moz-transform: rotate(0deg);
         transform: rotate(0deg);
         opacity: 0;
     }
     100% {
-        -moz-transform: rotate(360deg);
         transform: rotate(360deg);
         opacity: 1;
     }
